fix: code wrap

--- a/packages/shared/src/configs/theme-css/default.css
+++ b/packages/shared/src/configs/theme-css/default.css
@@ -241,7 +241,7 @@ pre.code__pre > code,
   text-indent: 0;
   color: inherit;
   background: none;
-  white-space: pre;
+  white-space: nowrap;
   margin: 0;
 }
 
